# HLAggregator

./: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/aggregator/: dydx.rs  hyperliquid.rs  mod.rs  traits.rs  types.rs  websocket.rs
src/bridge_config/: mainnet.toml
src/config/: mainnet.toml
src/trading/: dydx_service.rs  hyperliquid_service.rs  mod.rs  orders.rs  positions.rs  wallet.rs
src/trading/tests/: mod.rs
