[package]
name = "hl_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.4"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
hyperliquid_rust_sdk = "0.5.0"
chrono = "0.4"
primitive-types = "0.12.2"
thiserror = "2.0.4"
ethers = "2.0"
dirs = "5.0"
rand = "0.8"
hex = "0.4"